<resources>
    <string name="app_name">Bike Store</string>
    <string name="bike_store">Bike Store</string>
    <string name="insira_seu_e_mail">Insira seu e-mail</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="clique_aqui">Clique aqui.</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="acessar">-------------- ou acessar com --------------</string>
    <string name="recuperar_senha">Recuperação de senha</string>
    <string name="continuar">Continuar</string>
    <string name="voltar">Voltar</string>
    <string name="texto_recupera_senha">Agora insira o código que te enviamos por e-mail e celular para criar uma nova senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="bicicletas">Bicicletas</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="horarios">Horários</string>
    <string name="planos">Planos</string>
    <string name="reservas">Reservas</string>
    <string name="listas">Listas</string>
    <string name="sac">SAC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_bicicletas">Lista bicicletas</string>
    <string name="t_tulo_bike">Título Bike</string>
</resources>