<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastrarUsuariosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVoltar"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:text="@string/voltar"
            android:textAllCaps="true"
            android:textColor="#FD9700"
            app:cornerRadius="6dp"
            app:icon="@drawable/baseline_arrow_back"
            app:iconTint="#FD9700"
            app:strokeColor="#FD9700"
            app:strokeWidth="2sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60sp"
                android:layout_marginBottom="40sp"
                android:text="@string/cadastre_se"
                android:textColor="#FF9800"
                android:textSize="35sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:hint="@string/insira_seu_e_mail"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:hint="@string/insira_sua_senha"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:hint="@string/confirme_sua_senha"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#673AB7"
                android:text="@string/cadastrar"
                android:textAllCaps="true"
                android:textColor="#fff"
                app:cornerRadius="6dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>