<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecuperarUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVoltar"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="#FD9700"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:text="@string/voltar"
            android:textAllCaps="true"
            android:textColor="#FD9700"
            app:cornerRadius="6dp"
            app:icon="@drawable/baseline_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="40sp"
            android:text="@string/recuperar_senha"
            android:textColor="#FF9800"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="40sp"
            android:padding="15sp"
            android:text="@string/texto_recupera_senha"
            android:textAlignment="center"
            android:textColor="#673AB6"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_margin="3dp"
                android:hint="0">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="25sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0:06"
                android:textColor="#FF9800"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20sp"
            android:backgroundTint="#673AB7"
            android:text="@string/continuar"
            android:textAllCaps="true"
            android:textColor="#fff"
            app:cornerRadius="6dp" />


    </LinearLayout>

</LinearLayout>