<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuPrincipalActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVoltar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/voltar"
        android:textAllCaps="true"
        android:textColor="#FD9700"
        app:cornerRadius="6dp"
        app:icon="@drawable/baseline_arrow_back"
        app:iconTint="#FD9700"
        app:strokeColor="#FD9700"
        app:strokeWidth="2sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardBicicletas"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="@string/bicicletas"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHorarios"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/timer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="@string/horarios"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEquipamentos"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/atividades" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="Equipamentos"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardReservas"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horarios" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="@string/reservas"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAcessorios"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/acessorios" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="Acessórios"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCategorias"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/categorias" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:text="Categorias"
                    android:textAllCaps="true"
                    android:textColor="#222162"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>